--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=CondoCare_SWP
+
+spring.datasource.url=jdbc:mysql://localhost:3306/CondoCare_SWP?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true  # FIXED: Match DB name from dump
+spring.datasource.username=root
+spring.datasource.password=12345
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
+
+server.port=8080
