--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,15 @@ spring.datasource.url=jdbc:mysql://localhost:3306/CondoCare_SWP?useSSL=false&ser
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-spring.jpa.hibernate.ddl-auto=update
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=validate  # Ho?c update n?u c?n t?o table t? ??ng, nh?ng dùng schema ?ã có thì validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.web.resources.static-locations=classpath:/static/,file:uploads/
 
+# Security (optional, nh?ng h?u ích cho debug)
+logging.level.org.springframework.security=DEBUG
+
+# Server port (optional)
 server.port=8080
