--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=CondoCare_SWP
 
-spring.datasource.url=jdbc:mysql://localhost:3306/CondoCare_SWP?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true  # FIXED: Match DB name from dump
+spring.datasource.url=jdbc:mysql://localhost:3306/swp391?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true  # FIXED: Match DB name from dump
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
