--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,57 @@
-spring.application.name=CondoCare_SWP
-
-spring.datasource.url=jdbc:mysql://localhost:3306/swp391?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true  # FIXED: Match DB name from dump
+# ==================================================
+# ==================================================
+spring.datasource.url=jdbc:mysql://localhost:3306/SWP391?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=validate  # Ho?c update n?u c?n t?o table t? ??ng, nh?ng dùng schema ?ã có thì validate
+# ==================================================
+# ==================================================
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Security (optional, nh?ng h?u ích cho debug)
-logging.level.org.springframework.security=DEBUG
+# ==================================================
+# ==================================================
+jwt.secret=swp391ApartmentManagementSecretKeyForJWTTokenGeneration2024
+jwt.expiration=86400000
 
-# Server port (optional)
+# ==================================================
+# ==================================================
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hiune2315@gmail.com
+spring.mail.password=nrid ezoy ygod nmzf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+# ==================================================
+# ==================================================
 server.port=8080
+server.servlet.context-path=/
+
+# ==================================================
+# ==================================================
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+spring.thymeleaf.encoding=UTF-8
+
+# ==================================================
+# ==================================================
+logging.level.com.swp391.apartmentmanagement=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# ==================================================
+# ==================================================
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# ==================================================
+# ==================================================
+password.reset.token.expiration=3600000
