--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ jwt.expiration=86400000
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=hiune2315@gmail.com
-spring.mail.password=nrid ezoy ygod nmzf
+spring.mail.password=sgkv qgnc gvmn kbbi
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
